[package]
name = "kanso"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A simple, append-only writing tool. Inspired by Ensō."

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["advanced", "tokio"] }

thiserror = "1.0"
tokio = { version = "1.33", features = ["fs", "time"] }
unicode-segmentation = "1.10"